# or-traj-exporter

./: CMakeLists.txt  README.md  concat_ach_to_rs.sh  rename.sh
data/first_day/: movetraj0.txt  movetraj0_retimed.txt  movetraj1.txt  movetraj1_retimed.txt  movetraj2.txt  movetraj2_retimed.txt  movetraj3.txt  movetraj3_retimed.txt  movetraj4.txt  movetraj4_retimed.txt  movetraj5.txt  movetraj5_retimed.txt
data/first_mokup/ach/: movetraj0.traj  movetraj0_openhands.traj  movetraj1.traj  movetraj1_closehands.traj  movetraj2.traj  movetraj2_openhands.traj  movetraj3.traj  movetraj4.traj  movetraj4_closehands.traj  movetraj5.traj
data/first_mokup/openrave/redrchubomockupvalvetrajectoryandmeasurements/: movetraj0.txt  movetraj1.txt  movetraj2.txt  movetraj3.txt  movetraj4.txt  movetraj5.txt  robot_commands.config
src/: converter.cpp  converter.hpp  joint_map.hpp  or_trajectory.cpp  or_trajectory.hpp  utils.cpp  utils.hpp
trajs/: movetraj0.txt  movetraj1.txt  movetraj2.txt  movetraj3.txt
